# luajit

./: .gitignore  CMakeLists.txt  build-android.sh  build-r14-linux.sh  build-r14-win.sh  build.sh  build1.sh  ready.sh
.github/workflows/: blank.yml
host/buildVM/: CMakeLists.txt
host/lua51/: CMakeLists.txt
host/minilua/: CMakeLists.txt
src/: lib_hook.c  lib_hook.h  lj_meta.c  luajit.c  msvcbuild-debug.bat  msvcbuild.bat
test/: inde.lua  index.lua
